<resources>
    <string name="app_name">Bean There</string>
    <string name="title_community">Community</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_profile">Profile</string>
    <string name="title_beanThere">BeanThere</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    login page strings-->
    <string name="login_welcome">Welcome back</string>
    <string name="login_emailAddress">email address</string>
    <string name="login_password">password</string>
    <string name="login_buttonText">Login</string>
    <string name="logig_loggingInText">Logging in</string>
    <string name="login_forgotPassword">forgot password?</string>
    <string name="login_dontHaveAccount">Don\'t have an account?</string>
    <string name="login_Signup">Sign up</string>

    <!-- string values for buttons and textviews in profile screen -->
    <string name="profile_account">Account</string>
    <string name="profile_settings">Settings &amp; Preferences</string>
    <string name="profile_support">Support</string>
    <string name="profile_accountDetails">Account Details</string>
    <string name="profile_darkMode">Dark mode</string>
    <string name="profile_notifications">Notifications</string>
    <string name="profile_security">Security</string>
    <string name="profile_invite">Invite a friend</string>
    <string name="profile_helpCenter">Help center</string>
    <string name="profile_reportBug">Report bugs and Feedback</string>
    <string name="profile_logOut">Log out</string>

    <!--map id-->
    <string name="map_ID">56f210a55ec1171</string>

<!-- Discovered xml strings -->
    <string name="discovered_shopAddress">Coffee shop address</string>
    <string name="discovered_shopName">coffee shop name</string>
    <string name="discovered_shopHours">Operating hours</string>
    <string name="discovered_addPlaceImages">upload place images</string>
    <string name="discovered_addMenuImages">upload menu images</string>
    <string name="discovered_rateText">Rate coffee shop</string>
    <string name="discovered_buttonSubmit">Submit</string>

<!-- Favourites page   -->
    <string name="favourites_defaultText">No favourites</string>
    <string name="favourites_addToFavorites">Go to map to add locations to favourites</string>

<!-- Favourites cardview-->
    <string name="favouritesLogo">B</string>
    <string name="favouritesShopName">Bean There Coffee Co.</string>
    <string name="favouritesRate">4.4</string>
    <string name="favouritesNavigate">Navigate</string>
    <string name="favouritesAddress">44 Stanley Ave, Milpark, Johannesburg</string>

<!--    Bottomsheet-->
    <string name="BottomsheetDirectionsButton">Directions</string>
    <string name="BottomsheetShareButton">Share</string>
    <string name="BottomsheetOperatingHours">Operating Hours:</string>
    <string name="bottomsheetOperatingUnavailable">Operating hours are not provided</string>

</resources>