<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/baseline_groups_24"
        android:title="@string/title_community" />

    <item
        android:id="@+id/navigation_beanthere"
        android:icon="@drawable/baseline_add_location_24"
        android:title="@string/title_beanThere"/>

    <item
        android:id="@+id/mapsFragment"
        android:icon="@drawable/baseline_coffee_24"
        android:title=""/>

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/title_favourites" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_profile" />

</menu>