<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_community">

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.example.beanthere.ui.Community.CommunityFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_community" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.example.beanthere.ui.Favourites.FavouritesFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourites">
<!--        <action-->
<!--            android:id="@+id/action_favouritesFragment_to_mapsFragment"-->
<!--            app:destination="@+id/mapsFragment">-->
<!--            <argument-->
<!--                android:name="placeId"-->
<!--                app:argType="string"-->
<!--                app:nullable="true"/>-->
<!--        </action>-->
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.beanthere.ui.Profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_beanthere"
        android:name="com.example.beanthere.Contribute"
        android:label="@string/title_beanThere"
        tools:layout="@layout/fragment_discovered" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.example.beanthere.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_maps">
<!--        <argument-->
<!--            android:name="placeId"-->
<!--            app:argType="string"-->
<!--            app:nullable="true"/>-->
    </fragment>
</navigation>