<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/favouritesCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="6dp"
    android:layout_marginBottom="10dp">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/favouritesLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favouritesLogo"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"/>

        <Space
            android:id="@+id/spaceBelowLogo"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@id/favouritesLogo"/>


        <TextView
            android:id="@+id/favouriteShopName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favouritesShopName"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_toEndOf="@id/favouritesLogo"
            android:layout_marginBottom="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_below="@id/favouriteShopName"
            android:layout_toEndOf="@id/favouritesLogo">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/star_solid"
                app:tint="@color/accentBrown"
                android:layout_marginEnd="5sp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/favouriteRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4.5"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="10sp"
                android:layout_gravity="center_vertical"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/favouriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/heart_solid"
            android:background="@drawable/cardview_background"
            android:padding="6dp"
            app:useMaterialThemeColors="false"
            android:layout_toStartOf="@id/favouritesShareButton"
            android:layout_marginEnd="16dp"/>

        <ImageView
            android:id="@+id/favouritesShareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share_nodes_svgrepo_com"
            app:tint="@color/black"
            android:background="@drawable/cardview_background"
            android:padding="6dp"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/favouritesAddressTex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favouritesAddress"
            android:textSize="10sp"
            android:drawableStart="@drawable/location_pin_svgrepo_com__1_"
            android:drawablePadding="2dp"
            android:layout_below="@id/spaceBelowLogo"
            android:layout_alignBaseline="@id/favouriteNavigateButton"/>

        <Button
            android:id="@+id/favouriteNavigateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favouritesNavigate"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:useMaterialThemeColors="false"
            android:backgroundTint="@color/accentBrown"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/spaceBelowLogo"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>