<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8f8"
    tools:context=".ui.Profile.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="6dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/quantum_grey"
                    android:paddingVertical="10dp">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:src="@drawable/circle_user_solid"
                        android:layout_marginEnd="12dp"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/UserName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="Your name goes here"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/UserEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="Your email goes here"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                    
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_account"
                android:textColor="#646464"
                android:textStyle="bold"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="6dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/quantum_grey"
                    android:paddingVertical="10dp">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:src="@drawable/circle_user_regular"
                        android:layout_marginEnd="12dp"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:layout_gravity="center"
                        android:text="@string/profile_accountDetails"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:src="@drawable/chevron_right_solid"
                        android:layout_gravity="center"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_settings"
                android:textColor="#646464"
                android:textStyle="bold"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/quantum_grey">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp">
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:src="@drawable/bell_regular"
                            android:layout_marginEnd="12dp"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:layout_gravity="center"
                            android:text="@string/profile_notifications"/>

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_weight="0.6"
                            android:layout_gravity="center"
                            android:layout_marginEnd="10dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:src="@drawable/shield_halved_solid"
                            android:layout_marginEnd="12dp"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/profile_security"
                            android:layout_gravity="center"/>

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            android:src="@drawable/chevron_right_solid"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_support"
                android:textColor="#646464"
                android:textStyle="bold"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/quantum_grey">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp">
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:src="@drawable/user_plus_solid"
                            android:layout_marginEnd="12dp"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/profile_invite"
                            android:layout_gravity="center"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            android:src="@drawable/chevron_right_solid"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp">
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:src="@drawable/baseline_help_outline_24"
                            android:layout_marginEnd="12dp"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:text="@string/profile_helpCenter"
                            android:layout_gravity="center"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            android:src="@drawable/chevron_right_solid"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingVertical="10dp">
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:src="@drawable/baseline_report_gmailerrorred_24"
                            android:layout_marginEnd="12dp"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:layout_gravity="center"
                            android:text="@string/profile_reportBug"/>
                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            android:src="@drawable/chevron_right_solid"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="6dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/quantum_grey">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:src="@drawable/arrow_right_from_bracket_solid"
                        android:layout_marginEnd="12dp"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:layout_gravity="center"
                        android:text="@string/profile_logOut"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
